sequencer render to stereoscopic video file memory leak #50115

Closed
opened 2016-11-25 15:58:52 +01:00 by JG Loquet · 9 comments

System Information
Win 7 64 premium family edition
core i7 12GB Ram
NVIDIA GeForce GTX 980 Ti 6GB

Blender Version
Broken: official 2.78a e8299c8
(tested with factory settings)

Short description of error
Memory allocation increases until system terminates blender process

Exact steps for others to reproduce the error
Load a side-by-side stereoscopic image sequence into the VSE, set views to stereo 3D, set in strip property "Use MultiView" Side-by-side
Set render output to H.264 Stereo 3D Side-by-side, render animation

stereobug.blend

**System Information** Win 7 64 premium family edition core i7 12GB Ram NVIDIA GeForce GTX 980 Ti 6GB **Blender Version** Broken: official 2.78a e8299c8 (tested with factory settings) **Short description of error** Memory allocation increases until system terminates blender process **Exact steps for others to reproduce the error** Load a side-by-side stereoscopic image sequence into the VSE, set views to stereo 3D, set in strip property "Use MultiView" Side-by-side Set render output to H.264 Stereo 3D Side-by-side, render animation [stereobug.blend](https://archive.blender.org/developer/F406167/stereobug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Jean-GabrielLOQUET

Added subscriber: @Jean-GabrielLOQUET
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

The file is missing the image.

The file is missing the image.
Author

render.png

(it does the same with any stereoscopic image)

![render.png](https://archive.blender.org/developer/F412464/render.png) (it does the same with any stereoscopic image)

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Dalai Felinto self-assigned this 2017-01-25 14:29:46 +01:00

I can reproduce this with:

blender -b --factory-startup --python-expr "import bpy;render=bpy.context.scene.render;render.use_multiview = True; render.filepath = '/tmp/';render.image_settings.file_format = 'H264';render.image_settings.views_format='STEREO_3D'" -s 1 -e 1 -a
I can reproduce this with: ``` blender -b --factory-startup --python-expr "import bpy;render=bpy.context.scene.render;render.use_multiview = True; render.filepath = '/tmp/';render.image_settings.file_format = 'H264';render.image_settings.views_format='STEREO_3D'" -s 1 -e 1 -a ```

This issue was referenced by e5482f986c

This issue was referenced by e5482f986cab62f77eec441df80fb622cbb5f177

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50115
No description provided.