Fix T50115: stereoscopic video file memory leak